# market-flows

./: .gitignore  CLAUDE.md  CNAME  README.md  generate_dashboard.py  index.html  market_flows.py  pyproject.toml  requirements.txt
.github/workflows/: backtest.yaml  daily-update.yaml
backtests/: TRADING_PRINCIPLES.md  orb_monday_range.py  orb_volume_indicator.pine  test_composite_gradient.py  test_gradient_formulas.py  test_hybrid_runner.py  test_omx_stockholm.py  test_quality_runner.py  test_rebreakout.py  test_sector_analysis.py  test_t_override.py  test_time_of_day.py  test_trend_filter.py  test_trend_threshold.py  visualize_results.py
backtests/.cache/: daily_data.pkl
backtests/results/: composite_gradient.csv  dashboard.html  gradient_formulas.csv  hybrid_runner.csv  omx_stockholm.csv  overnight_comparison.csv  quality_runner.csv  rebreakout_analysis.csv  rebreakout_signals.csv  rr_simulation.csv  runner_best.csv  runner_comparison.csv  sector_analysis.csv  strategy_a_orb.csv  strategy_b_monday_range.csv  strategy_c_confluence.csv  strategy_d_orb_window.csv  strategy_e_vwap.csv  test_chart.html  (+18 more)
data/: breadth.json  cot_history.parquet  credit_spreads.json  etf_aum.json  fear_greed.json  fed_liquidity.json  jobless_claims.json  margin_debt.json  move_skew_dxy.json  nfci.json  putcall_history.json  putcall_live.json  real_yields.json  sp500_tickers.json
market_flows/: breadth.py  cache.py  cli.py  config.py  cot.py  dashboard.py  etf.py  external.py  http.py  regime.py  sentiment.py
templates/: dashboard.html
tests/: test_backtest.py  test_regime.py
(+5559 files in other folders)
