[project]
name = "market-flows"
version = "0.1.0"
description = "Weekly market flow tracker — COT positioning & ETF sector flows"
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.1,<3",
    "yfinance>=0.2.36,<2",
    "requests>=2.31,<3",
    "pyarrow>=14,<24",
    "jinja2>=3.1,<4",
    "plotly>=5.18,<7",
    "openpyxl>=3.1,<4",
    "lxml>=5.0,<6",
    "fredapi>=0.5,<1",
    "fear-and-greed>=0.4,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
market-flows = "market_flows.cli:main"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
